syntax = "proto3";

package question_form_v1;

option go_package = "github.com/Kosfedev/learn_go/pkg/question_form_v1;question_form_v1";

import "question.proto";
import "set.proto";
import "subcategory.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Service Api"
    version: "1.0"
  }
  tags: {
    name: "Question Form"
    description: "Операции по получению агрегированых данных по вопросам и связанным сущностям"
  }
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service QuestionFormV1 {
  rpc GetWithOptionsSetsSubcategories(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/v1/question_form/{id}"
    };
  };
}

// TODO: настроить импорт
message QuestionOption {
  int64 id = 1;
  string text = 2;
  bool is_correct = 3;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  message Data {
      question_v1.Question question = 1;
      repeated QuestionOption options = 2;
      repeated set_v1.Set sets = 3;
      repeated subcategory_v1.Subcategory subcategories = 4;
  }

  Data data = 1;
}
